# PE-miniproject-1

./: .gitignore  README.md  pyproject.toml
graph_generation/: __init__.py  graph.py  node.py
src/: experiments.py  graph.py  main.py  node.py
src/classes/: __init__.py  graph.py  node.py
src/secret_sharing/: __init__.py  graph.py  node.py  results.py  simulation.py  visualizer.py
src/utils/: logging.py
